HadBarのファイル名をParameterBarに変更。 ParameterBarリファクタ ParameterBarを親子関係に対応。 ParameterBarをえねみーの頭上に表示できるよう変更。

--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -114,7 +114,8 @@
       <Filter>GameObject\Component</Filter>
     </ClCompile>
     <ClCompile Include="Ocean.cpp" />
-    <ClCompile Include="GameObject\Component\HadBar.cpp">
+    <ClCompile Include="GameObject\Village\ItemManager.cpp" />
+    <ClCompile Include="GameObject\Component\ParameterBar.cpp">
       <Filter>GameObject\Component</Filter>
     </ClCompile>
   </ItemGroup>
@@ -243,7 +244,8 @@
       <Filter>GameObject\Component</Filter>
     </ClInclude>
     <ClInclude Include="Ocean.h" />
-    <ClInclude Include="GameObject\Component\HadBar.h">
+    <ClInclude Include="GameObject\Village\ItemManager.h" />
+    <ClInclude Include="GameObject\Component\ParameterBar.h">
       <Filter>GameObject\Component</Filter>
     </ClInclude>
   </ItemGroup>
