--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -159,8 +159,8 @@
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameLight.h" />
     <ClInclude Include="GameObject\Component\CharacterParameter.h" />
-    <ClInclude Include="GameObject\Component\HadBar.h" />
     <ClInclude Include="GameObject\Component\ObjectRotation.h" />
+    <ClInclude Include="GameObject\Component\ParameterBar.h" />
     <ClInclude Include="GameObject\Enemy\Enemy.h" />
     <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h" />
@@ -211,8 +211,8 @@
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameLight.cpp" />
     <ClCompile Include="GameObject\Component\CharacterParameter.cpp" />
-    <ClCompile Include="GameObject\Component\HadBar.cpp" />
     <ClCompile Include="GameObject\Component\ObjectRotation.cpp" />
+    <ClCompile Include="GameObject\Component\ParameterBar.cpp" />
     <ClCompile Include="GameObject\Enemy\Enemy.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp" />
