--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -61,16 +61,10 @@
     <ClCompile Include="GameObject\Village\ContinentObject.cpp">
       <Filter>GameObject\Village</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject\Village\HistoryButton.cpp">
-      <Filter>GameObject\Village</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\Village\HistoryManager.cpp">
       <Filter>GameObject\Village</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Village\HistoryMenu.cpp">
-      <Filter>GameObject\Village</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject\Village\HistoryMenuSelect.cpp">
       <Filter>GameObject\Village</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Village\MessageManager.cpp">
@@ -119,6 +113,14 @@
     </ClCompile>
     <ClCompile Include="GameObject\SpaceCollisionObject.cpp">
       <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="FreeCamera.cpp" />
+    <ClCompile Include="ThirdPersonCamera.cpp" />
+    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateClose.cpp">
+      <Filter>GameObject\HistoryBook\HFSM</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateMove.cpp">
+      <Filter>GameObject\HistoryBook\HFSM</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -187,9 +189,6 @@
     <ClInclude Include="GameObject\Village\ContinentObject.h">
       <Filter>GameObject\Village</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject\Village\HistoryButton.h">
-      <Filter>GameObject\Village</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\Village\HistoryInfo.h">
       <Filter>GameObject\Village</Filter>
     </ClInclude>
@@ -197,9 +196,6 @@
       <Filter>GameObject\Village</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Village\HistoryMenu.h">
-      <Filter>GameObject\Village</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject\Village\HistoryMenuSelect.h">
       <Filter>GameObject\Village</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Village\MessageManager.h">
@@ -251,6 +247,14 @@
     </ClInclude>
     <ClInclude Include="GameObject\SpaceCollisionObject.h">
       <Filter>GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="FreeCamera.h" />
+    <ClInclude Include="ThirdPersonCamera.h" />
+    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateClose.h">
+      <Filter>GameObject\HistoryBook\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateMove.h">
+      <Filter>GameObject\HistoryBook\HFSM</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
