・いろいろできた

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -173,14 +173,19 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWaitState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h" />
     <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
-    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookState.h" />
-    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateClose.h" />
-    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateIdol.h" />
-    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateMove.h" />
-    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateOpen.h" />
-    <ClInclude Include="GameObject\HistoryBook\HFSM\HistoryBookStateUnused.h" />
-    <ClInclude Include="GameObject\HistoryBook\HistoryBook.h" />
-    <ClInclude Include="GameObject\HistoryChip\Chips.h" />
+    <ClInclude Include="GameObject\History\Chip.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HFSM\HistoryBookState.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateClose.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateIdol.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateMove.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateOpen.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateUnused.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HistoryBook.h" />
+    <ClInclude Include="GameObject\History\HistoryBook\HistoryPage.h" />
+    <ClInclude Include="GameObject\History\HistoryInfo.h" />
+    <ClInclude Include="GameObject\History\HistoryManager.h" />
+    <ClInclude Include="GameObject\History\HistoryMenu\Chip2D.h" />
+    <ClInclude Include="GameObject\History\HistoryMenu\HistoryMenu.h" />
     <ClInclude Include="GameObject\Player\Player.h" />
     <ClInclude Include="GameObject\Player\PlayerState\PlayerState.h" />
     <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h" />
@@ -190,9 +195,6 @@
     <ClInclude Include="GameObject\SpaceCollisionObject.h" />
     <ClInclude Include="GameObject\SplitSpace.h" />
     <ClInclude Include="GameObject\Village\ContinentObject.h" />
-    <ClInclude Include="GameObject\Village\HistoryInfo.h" />
-    <ClInclude Include="GameObject\Village\HistoryManager.h" />
-    <ClInclude Include="GameObject\Village\HistoryMenu.h" />
     <ClInclude Include="GameObject\Village\ItemManager.h" />
     <ClInclude Include="GameObject\Village\MessageManager.h" />
     <ClInclude Include="GameObject\Village\NPC.h" />
@@ -228,13 +230,17 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWaitState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp" />
     <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
-    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateClose.cpp" />
-    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateIdol.cpp" />
-    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateMove.cpp" />
-    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateOpen.cpp" />
-    <ClCompile Include="GameObject\HistoryBook\HFSM\HistoryBookStateUnused.cpp" />
-    <ClCompile Include="GameObject\HistoryBook\HistoryBook.cpp" />
-    <ClCompile Include="GameObject\HistoryChip\Chips.cpp" />
+    <ClCompile Include="GameObject\History\Chip.cpp" />
+    <ClCompile Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateClose.cpp" />
+    <ClCompile Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateIdol.cpp" />
+    <ClCompile Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateMove.cpp" />
+    <ClCompile Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateOpen.cpp" />
+    <ClCompile Include="GameObject\History\HistoryBook\HFSM\HistoryBookStateUnused.cpp" />
+    <ClCompile Include="GameObject\History\HistoryBook\HistoryBook.cpp" />
+    <ClCompile Include="GameObject\History\HistoryBook\HistoryPage.cpp" />
+    <ClCompile Include="GameObject\History\HistoryManager.cpp" />
+    <ClCompile Include="GameObject\History\HistoryMenu\Chip2D.cpp" />
+    <ClCompile Include="GameObject\History\HistoryMenu\HistoryMenu.cpp" />
     <ClCompile Include="GameObject\Player\Player.cpp" />
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp" />
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateDeath.cpp" />
@@ -243,8 +249,6 @@
     <ClCompile Include="GameObject\SpaceCollisionObject.cpp" />
     <ClCompile Include="GameObject\SplitSpace.cpp" />
     <ClCompile Include="GameObject\Village\ContinentObject.cpp" />
-    <ClCompile Include="GameObject\Village\HistoryManager.cpp" />
-    <ClCompile Include="GameObject\Village\HistoryMenu.cpp" />
     <ClCompile Include="GameObject\Village\ItemManager.cpp" />
     <ClCompile Include="GameObject\Village\MessageManager.cpp" />
     <ClCompile Include="GameObject\Village\NPC.cpp" />
