--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -161,10 +161,13 @@
     <ClInclude Include="GameLight.h" />
     <ClInclude Include="GameObject\Component\CharacterParameter.h" />
     <ClInclude Include="GameObject\Component\ObjectRotation.h" />
+    <ClInclude Include="GameObject\Component\ObjectSpawn.h" />
     <ClInclude Include="GameObject\Component\ParameterBar.h" />
     <ClInclude Include="GameObject\Enemy\Enemy.h" />
     <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
+    <ClInclude Include="GameObject\Enemy\EnemyManager.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyDeathState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyFallState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyStartAttackState.h" />
@@ -218,10 +221,13 @@
     <ClCompile Include="GameLight.cpp" />
     <ClCompile Include="GameObject\Component\CharacterParameter.cpp" />
     <ClCompile Include="GameObject\Component\ObjectRotation.cpp" />
+    <ClCompile Include="GameObject\Component\ObjectSpawn.cpp" />
     <ClCompile Include="GameObject\Component\ParameterBar.cpp" />
     <ClCompile Include="GameObject\Enemy\Enemy.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
+    <ClCompile Include="GameObject\Enemy\EnemyManager.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyDeathState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyFallState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyStartAttackState.cpp" />
