--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
     <ClInclude Include="GameObject\Enemy\EnemyManager.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyDamageReactionState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDeathState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyFallState.h" />
@@ -241,6 +242,7 @@
     <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyManager.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyDamageReactionState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDeathState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyFallState.cpp" />
