--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -176,6 +176,9 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDamageReactionState.cpp">
       <Filter>GameObject\Enemy\HFSM</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyThreatState.cpp">
+      <Filter>GameObject\Enemy\HFSM</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
@@ -364,6 +367,9 @@
       <Filter>GameObject\Enemy</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDamageReactionState.h">
+      <Filter>GameObject\Enemy\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyThreatState.h">
       <Filter>GameObject\Enemy\HFSM</Filter>
     </ClInclude>
   </ItemGroup>
