--- a/game/fbEngine/fbEngine/fbEngine.vcxproj
+++ b/game/fbEngine/fbEngine/fbEngine.vcxproj
@@ -42,6 +42,7 @@
     <ClCompile Include="_Object\_Component\ComponentManager.cpp" />
     <ClCompile Include="_Object\_Component\Transform.cpp" />
     <ClCompile Include="_Object\_Component\_2D\CircleCollision.cpp" />
+    <ClCompile Include="_Object\_Component\_2D\Font.cpp" />
     <ClCompile Include="_Object\_Component\_2D\FontManager.cpp" />
     <ClCompile Include="_Object\_Component\_2D\Sprite.cpp" />
     <ClCompile Include="_Object\_Component\_2D\SquareCollision.cpp" />
@@ -125,6 +126,7 @@
     <ClInclude Include="_Object\_Component\Transform.h" />
     <ClInclude Include="_Object\_Component\_2D\CircleCollision.h" />
     <ClInclude Include="_Object\_Component\_2D\Collisiont2D.h" />
+    <ClInclude Include="_Object\_Component\_2D\Font.h" />
     <ClInclude Include="_Object\_Component\_2D\FontManager.h" />
     <ClInclude Include="_Object\_Component\_2D\Sprite.h" />
     <ClInclude Include="_Object\_Component\_2D\SquareCollision.h" />
